# OOP-FastTypingGame

FastTypingGame/: CMakeLists.txt  gameengine.cpp  gameengine.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modewindow.cpp  modewindow.h  modewindow.ui  resources.qrc  resultwindow.cpp  resultwindow.h  resultwindow.ui  texts_en.txt
